Fixed footer bug
- Fixed bug where content would overflow the footer and when content was
displayed squished

--- a/assets/css/generic.css
+++ b/assets/css/generic.css
@@ -140,19 +140,19 @@ https://pixabay.com/en/magnifying-glass-search-1083373/*/
 
 main {
   width: 100%;
-  height: calc(100% - 80px);
+  min-height: calc(100vh - 80px);
 }
 
 #content_background {
   width: 100%;
-  height: 100%;
+  min-height: calc(100vh - 80px);
   background-color: #ECECEC;
 }
 
 #content_wrapper {
   min-width: 320px;
   max-width: 1000px;
-  height: 100%;
+  min-height: calc(100vh - 80px);
   margin: auto;
   color: #000000;
   background-color: #F3F3F3;
@@ -160,6 +160,8 @@ main {
 
 #content {
   padding: 20px;
+  margin: 0;
+  min-height: 100%;
 }
 
 footer {
